--- a/gcfunction/package.json
+++ b/gcfunction/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "architecture1-gc-function",
+  "name": "gcfunction",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
